--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      html, body {
+         overflow-x: hidden;
+        }
+
+    </style>
 
     <title>VJ DataQuesters - Data Science Club at VNRVJIET College</title>
     <meta
