--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://vjdataquesters.vercel.app" />
+    <meta property="og:url" content="https://vjdataquesters.com" />
     <meta
       property="og:title"
       content="VJ DataQuesters - Data Science Club at VNRVJIET College"
@@ -35,7 +35,7 @@
     />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://vjdataquesters.vercel.app" />
+    <meta property="twitter:url" content="https://vjdataquesters.com" />
     <meta
       property="twitter:title"
       content="VJ DataQuesters - Data Science Club at VNRVJIET College"
